# openapi/openapi.yaml
@@ -69,6 +69,27 @@ paths:
       responses:
         '204':
           description: Task delete
+    get:
+      summary: Get task by user id
+      tags:
+        - tasks
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+            format: uint
+          required: true
+          description: ID user
+      responses:
+        '202':
+          description: Task user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
   /users:
     get:
       tags:
@@ -160,6 +181,9 @@ components:
           type: string
         is_done:
           type: boolean
+        userId:
+          type: integer
+          format: uint
     User:
       type: object
       properties:
